fix: add z-index to dropdown button

--- a/src/styles/default/_button-dropdown.scss
+++ b/src/styles/default/_button-dropdown.scss
@@ -1,4 +1,7 @@
 .button-dropdown {
+    position: relative;
+    z-index: 100;
+
     .button-svg {
         position: relative;
         top: 1px;
